# pyprotoc-plugin

./: .bazelrc  .gitignore  .gitmodules  .style.yapf  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  requirements.in  requirements.txt  requirements_lock.txt  rules.bzl
.github/workflows/: check-format-style.yml  check_code_style.yml  pre-merge-checks.yml
.github/workflows/scripts/: check-format-style.sh
.mergequeue/: config.yml
bazel/: deps.bzl  py_toolchains.bzl  pypi_repos.bzl  repos.bzl
pyprotoc_plugin/: BUILD.bazel  helpers.py  plugins.py
tests/: BUILD.bazel  protoc-gen-sample.py  sample_generated_library_test.py  sample_rule.bzl  sample_service.proto  sample_template.j2
tests/cpp/: BUILD.bazel  another_service.proto  cc_generated_test.cc  protoc-gen-headers.py  sample_service.proto
tests/python/: BUILD.bazel  library_tests.py  protoc-gen-sample.py  sample_generated_library_test.py
