load("@pyprotoc_plugin_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "pyprotoc_plugin",
    srcs = glob(["pyprotoc_plugin/**/*.py"]),
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        requirement("Jinja2"),
        requirement("protobuf"),
    ],
)

py_test(
    name = "library_tests",
    srcs = [
        "tests/library_tests.py",
    ],
    deps = [
        ":pyprotoc_plugin",
    ],
)
