module(name="com_github_reboot_dev_pyprotoc_plugin", version = "1.0")

bazel_dep(name = "rules_python", version = "0.35.0")
bazel_dep(name = "protobuf", version = "28.0")
bazel_dep(name = "rules_proto", version = "6.0.2")


python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.10")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pyprotoc_plugin_pypi",
    python_version = "3.10",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pyprotoc_plugin_pypi")